PROJETO/ProjetoPLC (2)/ProjetoPLCm/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    NOT
    READ

Grammar

Rule 0     S' -> program
Rule 1     program -> header declarations subprograms declarations BEGIN block END DOT
Rule 2     header -> PROGRAM ID SEMICOLON
Rule 3     declarations -> VAR var_list
Rule 4     declarations -> <empty>
Rule 5     var_list -> var_line
Rule 6     var_list -> var_list var_line
Rule 7     var_line -> id_list COLON type_def SEMICOLON
Rule 8     id_list -> ID
Rule 9     id_list -> id_list COMMA ID
Rule 10    type_def -> INTEGER
Rule 11    type_def -> BOOLEAN
Rule 12    type_def -> STRING
Rule 13    type_def -> ARRAY LBRACKET NUM RANGE NUM RBRACKET OF type_def
Rule 14    subprograms -> subprograms subprogram
Rule 15    subprograms -> <empty>
Rule 16    subprogram -> func_head vars_local compound_stmt SEMICOLON
Rule 17    subprogram -> proc_head vars_local compound_stmt SEMICOLON
Rule 18    func_head -> FUNCTION ID args_decl COLON type_def SEMICOLON
Rule 19    proc_head -> PROCEDURE ID args_decl SEMICOLON
Rule 20    args_decl -> LPAREN arg_list RPAREN
Rule 21    args_decl -> <empty>
Rule 22    arg_list -> arg_item
Rule 23    arg_list -> arg_list SEMICOLON arg_item
Rule 24    arg_item -> id_list COLON type_def
Rule 25    vars_local -> declarations
Rule 26    block -> statements
Rule 27    statements -> statement
Rule 28    statements -> statements SEMICOLON statement
Rule 29    statement -> assignment
Rule 30    statement -> write_stmt
Rule 31    statement -> read_stmt
Rule 32    statement -> if_stmt
Rule 33    statement -> while_stmt
Rule 34    statement -> repeat_stmt
Rule 35    statement -> for_stmt
Rule 36    statement -> func_call_stmt
Rule 37    statement -> compound_stmt
Rule 38    statement -> <empty>
Rule 39    repeat_stmt -> REPEAT statements UNTIL expression
Rule 40    func_call_stmt -> ID LPAREN expr_list RPAREN
Rule 41    compound_stmt -> BEGIN statements END
Rule 42    assignment -> ID ASSIGN expression
Rule 43    assignment -> ID LBRACKET expression RBRACKET ASSIGN expression
Rule 44    expression -> expression PLUS expression
Rule 45    expression -> expression MINUS expression
Rule 46    expression -> expression TIMES expression
Rule 47    expression -> expression DIV expression
Rule 48    expression -> expression SLASH expression
Rule 49    expression -> expression MOD expression
Rule 50    expression -> expression EQ expression
Rule 51    expression -> expression NEQ expression
Rule 52    expression -> expression LT expression
Rule 53    expression -> expression LE expression
Rule 54    expression -> expression GT expression
Rule 55    expression -> expression GE expression
Rule 56    expression -> expression AND expression
Rule 57    expression -> expression OR expression
Rule 58    expression -> NUM
Rule 59    expression -> STRING_LITERAL
Rule 60    expression -> TRUE
Rule 61    expression -> FALSE
Rule 62    expression -> LPAREN expression RPAREN
Rule 63    expression -> ID
Rule 64    expression -> ID LPAREN expr_list RPAREN
Rule 65    expression -> ID LBRACKET expression RBRACKET
Rule 66    write_stmt -> WRITELN LPAREN expr_list RPAREN
Rule 67    write_stmt -> WRITE LPAREN expr_list RPAREN
Rule 68    read_stmt -> READLN LPAREN ID RPAREN
Rule 69    read_stmt -> READLN LPAREN ID LBRACKET expression RBRACKET RPAREN
Rule 70    if_stmt -> IF expression THEN statement
Rule 71    if_stmt -> IF expression THEN statement ELSE statement
Rule 72    while_stmt -> WHILE expression DO statement
Rule 73    for_stmt -> FOR ID ASSIGN expression TO expression DO statement
Rule 74    for_stmt -> FOR ID ASSIGN expression DOWNTO expression DO statement
Rule 75    expr_list -> expression
Rule 76    expr_list -> expr_list COMMA expression

Terminals, with rules where they appear

AND                  : 56
ARRAY                : 13
ASSIGN               : 42 43 73 74
BEGIN                : 1 41
BOOLEAN              : 11
COLON                : 7 18 24
COMMA                : 9 76
DIV                  : 47
DO                   : 72 73 74
DOT                  : 1
DOWNTO               : 74
ELSE                 : 71
END                  : 1 41
EQ                   : 50
FALSE                : 61
FOR                  : 73 74
FUNCTION             : 18
GE                   : 55
GT                   : 54
ID                   : 2 8 9 18 19 40 42 43 63 64 65 68 69 73 74
IF                   : 70 71
INTEGER              : 10
LBRACKET             : 13 43 65 69
LE                   : 53
LPAREN               : 20 40 62 64 66 67 68 69
LT                   : 52
MINUS                : 45
MOD                  : 49
NEQ                  : 51
NOT                  : 
NUM                  : 13 13 58
OF                   : 13
OR                   : 57
PLUS                 : 44
PROCEDURE            : 19
PROGRAM              : 2
RANGE                : 13
RBRACKET             : 13 43 65 69
READ                 : 
READLN               : 68 69
REPEAT               : 39
RPAREN               : 20 40 62 64 66 67 68 69
SEMICOLON            : 2 7 16 17 18 19 23 28
SLASH                : 48
STRING               : 12
STRING_LITERAL       : 59
THEN                 : 70 71
TIMES                : 46
TO                   : 73
TRUE                 : 60
UNTIL                : 39
VAR                  : 3
WHILE                : 72
WRITE                : 67
WRITELN              : 66
error                : 

Nonterminals, with rules where they appear

arg_item             : 22 23
arg_list             : 20 23
args_decl            : 18 19
assignment           : 29
block                : 1
compound_stmt        : 16 17 37
declarations         : 1 1 25
expr_list            : 40 64 66 67 76
expression           : 39 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 62 65 69 70 71 72 73 73 74 74 75 76
for_stmt             : 35
func_call_stmt       : 36
func_head            : 16
header               : 1
id_list              : 7 9 24
if_stmt              : 32
proc_head            : 17
program              : 0
read_stmt            : 31
repeat_stmt          : 34
statement            : 27 28 70 71 71 72 73 74
statements           : 26 28 39 41
subprogram           : 14
subprograms          : 1 14
type_def             : 7 13 18 24
var_line             : 5 6
var_list             : 3 6
vars_local           : 16 17
while_stmt           : 33
write_stmt           : 30

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . header declarations subprograms declarations BEGIN block END DOT
    (2) header -> . PROGRAM ID SEMICOLON

    PROGRAM         shift and go to state 3

    program                        shift and go to state 1
    header                         shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> header . declarations subprograms declarations BEGIN block END DOT
    (3) declarations -> . VAR var_list
    (4) declarations -> .

  ! shift/reduce conflict for VAR resolved as shift
    VAR             shift and go to state 5
    FUNCTION        reduce using rule 4 (declarations -> .)
    PROCEDURE       reduce using rule 4 (declarations -> .)
    BEGIN           reduce using rule 4 (declarations -> .)

  ! VAR             [ reduce using rule 4 (declarations -> .) ]

    declarations                   shift and go to state 4

state 3

    (2) header -> PROGRAM . ID SEMICOLON

    ID              shift and go to state 6


state 4

    (1) program -> header declarations . subprograms declarations BEGIN block END DOT
    (14) subprograms -> . subprograms subprogram
    (15) subprograms -> .

    VAR             reduce using rule 15 (subprograms -> .)
    FUNCTION        reduce using rule 15 (subprograms -> .)
    PROCEDURE       reduce using rule 15 (subprograms -> .)
    BEGIN           reduce using rule 15 (subprograms -> .)

    subprograms                    shift and go to state 7

state 5

    (3) declarations -> VAR . var_list
    (5) var_list -> . var_line
    (6) var_list -> . var_list var_line
    (7) var_line -> . id_list COLON type_def SEMICOLON
    (8) id_list -> . ID
    (9) id_list -> . id_list COMMA ID

    ID              shift and go to state 11

    var_list                       shift and go to state 8
    var_line                       shift and go to state 9
    id_list                        shift and go to state 10

state 6

    (2) header -> PROGRAM ID . SEMICOLON

    SEMICOLON       shift and go to state 12


state 7

    (1) program -> header declarations subprograms . declarations BEGIN block END DOT
    (14) subprograms -> subprograms . subprogram
    (3) declarations -> . VAR var_list
    (4) declarations -> .
    (16) subprogram -> . func_head vars_local compound_stmt SEMICOLON
    (17) subprogram -> . proc_head vars_local compound_stmt SEMICOLON
    (18) func_head -> . FUNCTION ID args_decl COLON type_def SEMICOLON
    (19) proc_head -> . PROCEDURE ID args_decl SEMICOLON

    VAR             shift and go to state 5
    BEGIN           reduce using rule 4 (declarations -> .)
    FUNCTION        shift and go to state 17
    PROCEDURE       shift and go to state 18

    declarations                   shift and go to state 13
    subprogram                     shift and go to state 14
    func_head                      shift and go to state 15
    proc_head                      shift and go to state 16

state 8

    (3) declarations -> VAR var_list .
    (6) var_list -> var_list . var_line
    (7) var_line -> . id_list COLON type_def SEMICOLON
    (8) id_list -> . ID
    (9) id_list -> . id_list COMMA ID

    VAR             reduce using rule 3 (declarations -> VAR var_list .)
    FUNCTION        reduce using rule 3 (declarations -> VAR var_list .)
    PROCEDURE       reduce using rule 3 (declarations -> VAR var_list .)
    BEGIN           reduce using rule 3 (declarations -> VAR var_list .)
    ID              shift and go to state 11

    var_line                       shift and go to state 19
    id_list                        shift and go to state 10

state 9

    (5) var_list -> var_line .

    ID              reduce using rule 5 (var_list -> var_line .)
    VAR             reduce using rule 5 (var_list -> var_line .)
    FUNCTION        reduce using rule 5 (var_list -> var_line .)
    PROCEDURE       reduce using rule 5 (var_list -> var_line .)
    BEGIN           reduce using rule 5 (var_list -> var_line .)


state 10

    (7) var_line -> id_list . COLON type_def SEMICOLON
    (9) id_list -> id_list . COMMA ID

    COLON           shift and go to state 20
    COMMA           shift and go to state 21


state 11

    (8) id_list -> ID .

    COLON           reduce using rule 8 (id_list -> ID .)
    COMMA           reduce using rule 8 (id_list -> ID .)


state 12

    (2) header -> PROGRAM ID SEMICOLON .

    VAR             reduce using rule 2 (header -> PROGRAM ID SEMICOLON .)
    FUNCTION        reduce using rule 2 (header -> PROGRAM ID SEMICOLON .)
    PROCEDURE       reduce using rule 2 (header -> PROGRAM ID SEMICOLON .)
    BEGIN           reduce using rule 2 (header -> PROGRAM ID SEMICOLON .)


state 13

    (1) program -> header declarations subprograms declarations . BEGIN block END DOT

    BEGIN           shift and go to state 22


state 14

    (14) subprograms -> subprograms subprogram .

    VAR             reduce using rule 14 (subprograms -> subprograms subprogram .)
    FUNCTION        reduce using rule 14 (subprograms -> subprograms subprogram .)
    PROCEDURE       reduce using rule 14 (subprograms -> subprograms subprogram .)
    BEGIN           reduce using rule 14 (subprograms -> subprograms subprogram .)


state 15

    (16) subprogram -> func_head . vars_local compound_stmt SEMICOLON
    (25) vars_local -> . declarations
    (3) declarations -> . VAR var_list
    (4) declarations -> .

    VAR             shift and go to state 5
    BEGIN           reduce using rule 4 (declarations -> .)

    vars_local                     shift and go to state 23
    declarations                   shift and go to state 24

state 16

    (17) subprogram -> proc_head . vars_local compound_stmt SEMICOLON
    (25) vars_local -> . declarations
    (3) declarations -> . VAR var_list
    (4) declarations -> .

    VAR             shift and go to state 5
    BEGIN           reduce using rule 4 (declarations -> .)

    vars_local                     shift and go to state 25
    declarations                   shift and go to state 24

state 17

    (18) func_head -> FUNCTION . ID args_decl COLON type_def SEMICOLON

    ID              shift and go to state 26


state 18

    (19) proc_head -> PROCEDURE . ID args_decl SEMICOLON

    ID              shift and go to state 27


state 19

    (6) var_list -> var_list var_line .

    ID              reduce using rule 6 (var_list -> var_list var_line .)
    VAR             reduce using rule 6 (var_list -> var_list var_line .)
    FUNCTION        reduce using rule 6 (var_list -> var_list var_line .)
    PROCEDURE       reduce using rule 6 (var_list -> var_list var_line .)
    BEGIN           reduce using rule 6 (var_list -> var_list var_line .)


state 20

    (7) var_line -> id_list COLON . type_def SEMICOLON
    (10) type_def -> . INTEGER
    (11) type_def -> . BOOLEAN
    (12) type_def -> . STRING
    (13) type_def -> . ARRAY LBRACKET NUM RANGE NUM RBRACKET OF type_def

    INTEGER         shift and go to state 29
    BOOLEAN         shift and go to state 30
    STRING          shift and go to state 31
    ARRAY           shift and go to state 32

    type_def                       shift and go to state 28

state 21

    (9) id_list -> id_list COMMA . ID

    ID              shift and go to state 33


state 22

    (1) program -> header declarations subprograms declarations BEGIN . block END DOT
    (26) block -> . statements
    (27) statements -> . statement
    (28) statements -> . statements SEMICOLON statement
    (29) statement -> . assignment
    (30) statement -> . write_stmt
    (31) statement -> . read_stmt
    (32) statement -> . if_stmt
    (33) statement -> . while_stmt
    (34) statement -> . repeat_stmt
    (35) statement -> . for_stmt
    (36) statement -> . func_call_stmt
    (37) statement -> . compound_stmt
    (38) statement -> .
    (42) assignment -> . ID ASSIGN expression
    (43) assignment -> . ID LBRACKET expression RBRACKET ASSIGN expression
    (66) write_stmt -> . WRITELN LPAREN expr_list RPAREN
    (67) write_stmt -> . WRITE LPAREN expr_list RPAREN
    (68) read_stmt -> . READLN LPAREN ID RPAREN
    (69) read_stmt -> . READLN LPAREN ID LBRACKET expression RBRACKET RPAREN
    (70) if_stmt -> . IF expression THEN statement
    (71) if_stmt -> . IF expression THEN statement ELSE statement
    (72) while_stmt -> . WHILE expression DO statement
    (39) repeat_stmt -> . REPEAT statements UNTIL expression
    (73) for_stmt -> . FOR ID ASSIGN expression TO expression DO statement
    (74) for_stmt -> . FOR ID ASSIGN expression DOWNTO expression DO statement
    (40) func_call_stmt -> . ID LPAREN expr_list RPAREN
    (41) compound_stmt -> . BEGIN statements END

    SEMICOLON       reduce using rule 38 (statement -> .)
    END             reduce using rule 38 (statement -> .)
    ID              shift and go to state 47
    WRITELN         shift and go to state 48
    WRITE           shift and go to state 49
    READLN          shift and go to state 50
    IF              shift and go to state 51
    WHILE           shift and go to state 52
    REPEAT          shift and go to state 53
    FOR             shift and go to state 54
    BEGIN           shift and go to state 34

    block                          shift and go to state 35
    statements                     shift and go to state 36
    statement                      shift and go to state 37
    assignment                     shift and go to state 38
    write_stmt                     shift and go to state 39
    read_stmt                      shift and go to state 40
    if_stmt                        shift and go to state 41
    while_stmt                     shift and go to state 42
    repeat_stmt                    shift and go to state 43
    for_stmt                       shift and go to state 44
    func_call_stmt                 shift and go to state 45
    compound_stmt                  shift and go to state 46

state 23

    (16) subprogram -> func_head vars_local . compound_stmt SEMICOLON
    (41) compound_stmt -> . BEGIN statements END

    BEGIN           shift and go to state 34

    compound_stmt                  shift and go to state 55

state 24

    (25) vars_local -> declarations .

    BEGIN           reduce using rule 25 (vars_local -> declarations .)


state 25

    (17) subprogram -> proc_head vars_local . compound_stmt SEMICOLON
    (41) compound_stmt -> . BEGIN statements END

    BEGIN           shift and go to state 34

    compound_stmt                  shift and go to state 56

state 26

    (18) func_head -> FUNCTION ID . args_decl COLON type_def SEMICOLON
    (20) args_decl -> . LPAREN arg_list RPAREN
    (21) args_decl -> .

    LPAREN          shift and go to state 58
    COLON           reduce using rule 21 (args_decl -> .)

    args_decl                      shift and go to state 57

state 27

    (19) proc_head -> PROCEDURE ID . args_decl SEMICOLON
    (20) args_decl -> . LPAREN arg_list RPAREN
    (21) args_decl -> .

    LPAREN          shift and go to state 58
    SEMICOLON       reduce using rule 21 (args_decl -> .)

    args_decl                      shift and go to state 59

state 28

    (7) var_line -> id_list COLON type_def . SEMICOLON

    SEMICOLON       shift and go to state 60


state 29

    (10) type_def -> INTEGER .

    SEMICOLON       reduce using rule 10 (type_def -> INTEGER .)
    RPAREN          reduce using rule 10 (type_def -> INTEGER .)


state 30

    (11) type_def -> BOOLEAN .

    SEMICOLON       reduce using rule 11 (type_def -> BOOLEAN .)
    RPAREN          reduce using rule 11 (type_def -> BOOLEAN .)


state 31

    (12) type_def -> STRING .

    SEMICOLON       reduce using rule 12 (type_def -> STRING .)
    RPAREN          reduce using rule 12 (type_def -> STRING .)


state 32

    (13) type_def -> ARRAY . LBRACKET NUM RANGE NUM RBRACKET OF type_def

    LBRACKET        shift and go to state 61


state 33

    (9) id_list -> id_list COMMA ID .

    COLON           reduce using rule 9 (id_list -> id_list COMMA ID .)
    COMMA           reduce using rule 9 (id_list -> id_list COMMA ID .)


state 34

    (41) compound_stmt -> BEGIN . statements END
    (27) statements -> . statement
    (28) statements -> . statements SEMICOLON statement
    (29) statement -> . assignment
    (30) statement -> . write_stmt
    (31) statement -> . read_stmt
    (32) statement -> . if_stmt
    (33) statement -> . while_stmt
    (34) statement -> . repeat_stmt
    (35) statement -> . for_stmt
    (36) statement -> . func_call_stmt
    (37) statement -> . compound_stmt
    (38) statement -> .
    (42) assignment -> . ID ASSIGN expression
    (43) assignment -> . ID LBRACKET expression RBRACKET ASSIGN expression
    (66) write_stmt -> . WRITELN LPAREN expr_list RPAREN
    (67) write_stmt -> . WRITE LPAREN expr_list RPAREN
    (68) read_stmt -> . READLN LPAREN ID RPAREN
    (69) read_stmt -> . READLN LPAREN ID LBRACKET expression RBRACKET RPAREN
    (70) if_stmt -> . IF expression THEN statement
    (71) if_stmt -> . IF expression THEN statement ELSE statement
    (72) while_stmt -> . WHILE expression DO statement
    (39) repeat_stmt -> . REPEAT statements UNTIL expression
    (73) for_stmt -> . FOR ID ASSIGN expression TO expression DO statement
    (74) for_stmt -> . FOR ID ASSIGN expression DOWNTO expression DO statement
    (40) func_call_stmt -> . ID LPAREN expr_list RPAREN
    (41) compound_stmt -> . BEGIN statements END

    END             reduce using rule 38 (statement -> .)
    SEMICOLON       reduce using rule 38 (statement -> .)
    ID              shift and go to state 47
    WRITELN         shift and go to state 48
    WRITE           shift and go to state 49
    READLN          shift and go to state 50
    IF              shift and go to state 51
    WHILE           shift and go to state 52
    REPEAT          shift and go to state 53
    FOR             shift and go to state 54
    BEGIN           shift and go to state 34

    statements                     shift and go to state 62
    statement                      shift and go to state 37
    assignment                     shift and go to state 38
    write_stmt                     shift and go to state 39
    read_stmt                      shift and go to state 40
    if_stmt                        shift and go to state 41
    while_stmt                     shift and go to state 42
    repeat_stmt                    shift and go to state 43
    for_stmt                       shift and go to state 44
    func_call_stmt                 shift and go to state 45
    compound_stmt                  shift and go to state 46

state 35

    (1) program -> header declarations subprograms declarations BEGIN block . END DOT

    END             shift and go to state 63


state 36

    (26) block -> statements .
    (28) statements -> statements . SEMICOLON statement

    END             reduce using rule 26 (block -> statements .)
    SEMICOLON       shift and go to state 64


state 37

    (27) statements -> statement .

    SEMICOLON       reduce using rule 27 (statements -> statement .)
    END             reduce using rule 27 (statements -> statement .)
    UNTIL           reduce using rule 27 (statements -> statement .)


state 38

    (29) statement -> assignment .

    SEMICOLON       reduce using rule 29 (statement -> assignment .)
    END             reduce using rule 29 (statement -> assignment .)
    UNTIL           reduce using rule 29 (statement -> assignment .)
    ELSE            reduce using rule 29 (statement -> assignment .)


state 39

    (30) statement -> write_stmt .

    SEMICOLON       reduce using rule 30 (statement -> write_stmt .)
    END             reduce using rule 30 (statement -> write_stmt .)
    UNTIL           reduce using rule 30 (statement -> write_stmt .)
    ELSE            reduce using rule 30 (statement -> write_stmt .)


state 40

    (31) statement -> read_stmt .

    SEMICOLON       reduce using rule 31 (statement -> read_stmt .)
    END             reduce using rule 31 (statement -> read_stmt .)
    UNTIL           reduce using rule 31 (statement -> read_stmt .)
    ELSE            reduce using rule 31 (statement -> read_stmt .)


state 41

    (32) statement -> if_stmt .

    SEMICOLON       reduce using rule 32 (statement -> if_stmt .)
    END             reduce using rule 32 (statement -> if_stmt .)
    UNTIL           reduce using rule 32 (statement -> if_stmt .)
    ELSE            reduce using rule 32 (statement -> if_stmt .)


state 42

    (33) statement -> while_stmt .

    SEMICOLON       reduce using rule 33 (statement -> while_stmt .)
    END             reduce using rule 33 (statement -> while_stmt .)
    UNTIL           reduce using rule 33 (statement -> while_stmt .)
    ELSE            reduce using rule 33 (statement -> while_stmt .)


state 43

    (34) statement -> repeat_stmt .

    SEMICOLON       reduce using rule 34 (statement -> repeat_stmt .)
    END             reduce using rule 34 (statement -> repeat_stmt .)
    UNTIL           reduce using rule 34 (statement -> repeat_stmt .)
    ELSE            reduce using rule 34 (statement -> repeat_stmt .)


state 44

    (35) statement -> for_stmt .

    SEMICOLON       reduce using rule 35 (statement -> for_stmt .)
    END             reduce using rule 35 (statement -> for_stmt .)
    UNTIL           reduce using rule 35 (statement -> for_stmt .)
    ELSE            reduce using rule 35 (statement -> for_stmt .)


state 45

    (36) statement -> func_call_stmt .

    SEMICOLON       reduce using rule 36 (statement -> func_call_stmt .)
    END             reduce using rule 36 (statement -> func_call_stmt .)
    UNTIL           reduce using rule 36 (statement -> func_call_stmt .)
    ELSE            reduce using rule 36 (statement -> func_call_stmt .)


state 46

    (37) statement -> compound_stmt .

    SEMICOLON       reduce using rule 37 (statement -> compound_stmt .)
    END             reduce using rule 37 (statement -> compound_stmt .)
    UNTIL           reduce using rule 37 (statement -> compound_stmt .)
    ELSE            reduce using rule 37 (statement -> compound_stmt .)


state 47

    (42) assignment -> ID . ASSIGN expression
    (43) assignment -> ID . LBRACKET expression RBRACKET ASSIGN expression
    (40) func_call_stmt -> ID . LPAREN expr_list RPAREN

    ASSIGN          shift and go to state 65
    LBRACKET        shift and go to state 66
    LPAREN          shift and go to state 67


state 48

    (66) write_stmt -> WRITELN . LPAREN expr_list RPAREN

    LPAREN          shift and go to state 68


state 49

    (67) write_stmt -> WRITE . LPAREN expr_list RPAREN

    LPAREN          shift and go to state 69


state 50

    (68) read_stmt -> READLN . LPAREN ID RPAREN
    (69) read_stmt -> READLN . LPAREN ID LBRACKET expression RBRACKET RPAREN

    LPAREN          shift and go to state 70


state 51

    (70) if_stmt -> IF . expression THEN statement
    (71) if_stmt -> IF . expression THEN statement ELSE statement
    (44) expression -> . expression PLUS expression
    (45) expression -> . expression MINUS expression
    (46) expression -> . expression TIMES expression
    (47) expression -> . expression DIV expression
    (48) expression -> . expression SLASH expression
    (49) expression -> . expression MOD expression
    (50) expression -> . expression EQ expression
    (51) expression -> . expression NEQ expression
    (52) expression -> . expression LT expression
    (53) expression -> . expression LE expression
    (54) expression -> . expression GT expression
    (55) expression -> . expression GE expression
    (56) expression -> . expression AND expression
    (57) expression -> . expression OR expression
    (58) expression -> . NUM
    (59) expression -> . STRING_LITERAL
    (60) expression -> . TRUE
    (61) expression -> . FALSE
    (62) expression -> . LPAREN expression RPAREN
    (63) expression -> . ID
    (64) expression -> . ID LPAREN expr_list RPAREN
    (65) expression -> . ID LBRACKET expression RBRACKET

    NUM             shift and go to state 72
    STRING_LITERAL  shift and go to state 73
    TRUE            shift and go to state 74
    FALSE           shift and go to state 75
    LPAREN          shift and go to state 76
    ID              shift and go to state 77

    expression                     shift and go to state 71

state 52

    (72) while_stmt -> WHILE . expression DO statement
    (44) expression -> . expression PLUS expression
    (45) expression -> . expression MINUS expression
    (46) expression -> . expression TIMES expression
    (47) expression -> . expression DIV expression
    (48) expression -> . expression SLASH expression
    (49) expression -> . expression MOD expression
    (50) expression -> . expression EQ expression
    (51) expression -> . expression NEQ expression
    (52) expression -> . expression LT expression
    (53) expression -> . expression LE expression
    (54) expression -> . expression GT expression
    (55) expression -> . expression GE expression
    (56) expression -> . expression AND expression
    (57) expression -> . expression OR expression
    (58) expression -> . NUM
    (59) expression -> . STRING_LITERAL
    (60) expression -> . TRUE
    (61) expression -> . FALSE
    (62) expression -> . LPAREN expression RPAREN
    (63) expression -> . ID
    (64) expression -> . ID LPAREN expr_list RPAREN
    (65) expression -> . ID LBRACKET expression RBRACKET

    NUM             shift and go to state 72
    STRING_LITERAL  shift and go to state 73
    TRUE            shift and go to state 74
    FALSE           shift and go to state 75
    LPAREN          shift and go to state 76
    ID              shift and go to state 77

    expression                     shift and go to state 78

state 53

    (39) repeat_stmt -> REPEAT . statements UNTIL expression
    (27) statements -> . statement
    (28) statements -> . statements SEMICOLON statement
    (29) statement -> . assignment
    (30) statement -> . write_stmt
    (31) statement -> . read_stmt
    (32) statement -> . if_stmt
    (33) statement -> . while_stmt
    (34) statement -> . repeat_stmt
    (35) statement -> . for_stmt
    (36) statement -> . func_call_stmt
    (37) statement -> . compound_stmt
    (38) statement -> .
    (42) assignment -> . ID ASSIGN expression
    (43) assignment -> . ID LBRACKET expression RBRACKET ASSIGN expression
    (66) write_stmt -> . WRITELN LPAREN expr_list RPAREN
    (67) write_stmt -> . WRITE LPAREN expr_list RPAREN
    (68) read_stmt -> . READLN LPAREN ID RPAREN
    (69) read_stmt -> . READLN LPAREN ID LBRACKET expression RBRACKET RPAREN
    (70) if_stmt -> . IF expression THEN statement
    (71) if_stmt -> . IF expression THEN statement ELSE statement
    (72) while_stmt -> . WHILE expression DO statement
    (39) repeat_stmt -> . REPEAT statements UNTIL expression
    (73) for_stmt -> . FOR ID ASSIGN expression TO expression DO statement
    (74) for_stmt -> . FOR ID ASSIGN expression DOWNTO expression DO statement
    (40) func_call_stmt -> . ID LPAREN expr_list RPAREN
    (41) compound_stmt -> . BEGIN statements END

    UNTIL           reduce using rule 38 (statement -> .)
    SEMICOLON       reduce using rule 38 (statement -> .)
    ID              shift and go to state 47
    WRITELN         shift and go to state 48
    WRITE           shift and go to state 49
    READLN          shift and go to state 50
    IF              shift and go to state 51
    WHILE           shift and go to state 52
    REPEAT          shift and go to state 53
    FOR             shift and go to state 54
    BEGIN           shift and go to state 34

    statements                     shift and go to state 79
    statement                      shift and go to state 37
    assignment                     shift and go to state 38
    write_stmt                     shift and go to state 39
    read_stmt                      shift and go to state 40
    if_stmt                        shift and go to state 41
    while_stmt                     shift and go to state 42
    repeat_stmt                    shift and go to state 43
    for_stmt                       shift and go to state 44
    func_call_stmt                 shift and go to state 45
    compound_stmt                  shift and go to state 46

state 54

    (73) for_stmt -> FOR . ID ASSIGN expression TO expression DO statement
    (74) for_stmt -> FOR . ID ASSIGN expression DOWNTO expression DO statement

    ID              shift and go to state 80


state 55

    (16) subprogram -> func_head vars_local compound_stmt . SEMICOLON

    SEMICOLON       shift and go to state 81


state 56

    (17) subprogram -> proc_head vars_local compound_stmt . SEMICOLON

    SEMICOLON       shift and go to state 82


state 57

    (18) func_head -> FUNCTION ID args_decl . COLON type_def SEMICOLON

    COLON           shift and go to state 83


state 58

    (20) args_decl -> LPAREN . arg_list RPAREN
    (22) arg_list -> . arg_item
    (23) arg_list -> . arg_list SEMICOLON arg_item
    (24) arg_item -> . id_list COLON type_def
    (8) id_list -> . ID
    (9) id_list -> . id_list COMMA ID

    ID              shift and go to state 11

    arg_list                       shift and go to state 84
    arg_item                       shift and go to state 85
    id_list                        shift and go to state 86

state 59

    (19) proc_head -> PROCEDURE ID args_decl . SEMICOLON

    SEMICOLON       shift and go to state 87


state 60

    (7) var_line -> id_list COLON type_def SEMICOLON .

    ID              reduce using rule 7 (var_line -> id_list COLON type_def SEMICOLON .)
    VAR             reduce using rule 7 (var_line -> id_list COLON type_def SEMICOLON .)
    FUNCTION        reduce using rule 7 (var_line -> id_list COLON type_def SEMICOLON .)
    PROCEDURE       reduce using rule 7 (var_line -> id_list COLON type_def SEMICOLON .)
    BEGIN           reduce using rule 7 (var_line -> id_list COLON type_def SEMICOLON .)


state 61

    (13) type_def -> ARRAY LBRACKET . NUM RANGE NUM RBRACKET OF type_def

    NUM             shift and go to state 88


state 62

    (41) compound_stmt -> BEGIN statements . END
    (28) statements -> statements . SEMICOLON statement

    END             shift and go to state 89
    SEMICOLON       shift and go to state 64


state 63

    (1) program -> header declarations subprograms declarations BEGIN block END . DOT

    DOT             shift and go to state 90


state 64

    (28) statements -> statements SEMICOLON . statement
    (29) statement -> . assignment
    (30) statement -> . write_stmt
    (31) statement -> . read_stmt
    (32) statement -> . if_stmt
    (33) statement -> . while_stmt
    (34) statement -> . repeat_stmt
    (35) statement -> . for_stmt
    (36) statement -> . func_call_stmt
    (37) statement -> . compound_stmt
    (38) statement -> .
    (42) assignment -> . ID ASSIGN expression
    (43) assignment -> . ID LBRACKET expression RBRACKET ASSIGN expression
    (66) write_stmt -> . WRITELN LPAREN expr_list RPAREN
    (67) write_stmt -> . WRITE LPAREN expr_list RPAREN
    (68) read_stmt -> . READLN LPAREN ID RPAREN
    (69) read_stmt -> . READLN LPAREN ID LBRACKET expression RBRACKET RPAREN
    (70) if_stmt -> . IF expression THEN statement
    (71) if_stmt -> . IF expression THEN statement ELSE statement
    (72) while_stmt -> . WHILE expression DO statement
    (39) repeat_stmt -> . REPEAT statements UNTIL expression
    (73) for_stmt -> . FOR ID ASSIGN expression TO expression DO statement
    (74) for_stmt -> . FOR ID ASSIGN expression DOWNTO expression DO statement
    (40) func_call_stmt -> . ID LPAREN expr_list RPAREN
    (41) compound_stmt -> . BEGIN statements END

    SEMICOLON       reduce using rule 38 (statement -> .)
    END             reduce using rule 38 (statement -> .)
    UNTIL           reduce using rule 38 (statement -> .)
    ID              shift and go to state 47
    WRITELN         shift and go to state 48
    WRITE           shift and go to state 49
    READLN          shift and go to state 50
    IF              shift and go to state 51
    WHILE           shift and go to state 52
    REPEAT          shift and go to state 53
    FOR             shift and go to state 54
    BEGIN           shift and go to state 34

    statement                      shift and go to state 91
    assignment                     shift and go to state 38
    write_stmt                     shift and go to state 39
    read_stmt                      shift and go to state 40
    if_stmt                        shift and go to state 41
    while_stmt                     shift and go to state 42
    repeat_stmt                    shift and go to state 43
    for_stmt                       shift and go to state 44
    func_call_stmt                 shift and go to state 45
    compound_stmt                  shift and go to state 46

state 65

    (42) assignment -> ID ASSIGN . expression
    (44) expression -> . expression PLUS expression
    (45) expression -> . expression MINUS expression
    (46) expression -> . expression TIMES expression
    (47) expression -> . expression DIV expression
    (48) expression -> . expression SLASH expression
    (49) expression -> . expression MOD expression
    (50) expression -> . expression EQ expression
    (51) expression -> . expression NEQ expression
    (52) expression -> . expression LT expression
    (53) expression -> . expression LE expression
    (54) expression -> . expression GT expression
    (55) expression -> . expression GE expression
    (56) expression -> . expression AND expression
    (57) expression -> . expression OR expression
    (58) expression -> . NUM
    (59) expression -> . STRING_LITERAL
    (60) expression -> . TRUE
    (61) expression -> . FALSE
    (62) expression -> . LPAREN expression RPAREN
    (63) expression -> . ID
    (64) expression -> . ID LPAREN expr_list RPAREN
    (65) expression -> . ID LBRACKET expression RBRACKET

    NUM             shift and go to state 72
    STRING_LITERAL  shift and go to state 73
    TRUE            shift and go to state 74
    FALSE           shift and go to state 75
    LPAREN          shift and go to state 76
    ID              shift and go to state 77

    expression                     shift and go to state 92

state 66
